selectores hermanos, hijos

--- a/basicos.html
+++ b/basicos.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
 </head>
+
 <body>
-    <!-- Etiquetas vacias -->
-     <br><hr>
+     <!-- Etiquetas vacias -->
+     <br>
+     <hr>
 
      <!-- HTML -->
 
@@ -22,27 +25,29 @@
 
      <!-- Parrafos -->
      <span>Hola soy un texto en linea</span>
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate eveniet et quis saepe pariatur aut <b>repudiandae</b>, error placeat unde cumque voluptas nisi tempora labore? Nostrum magnam est quaerat quos aspernatur.</p>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate eveniet et quis saepe pariatur aut
+          <b>repudiandae</b>, error placeat unde cumque voluptas nisi tempora labore? Nostrum magnam est quaerat quos
+          aspernatur.</p>
      <br>
-     	<strong>Texto importante o palabra clave</strong>
-	<br>
-		<b>Texto en sin importancia destacable</b>
-	<br>
-		<em>Texto en cursiva importante</em>
-	<br>
-		<i>Texto en cursivo</i>
-	<br>
-		<u>Texto surayado</u>
-	<br>
-		<s>Texto eliminado</s>
-	<br>
-		<mark>Texto resaltado</mark>
-	<br>
-		<span>Texto sin importancia</span>
-	<br>
-		<p>100 <sup>2</sup></p>
-	<br>
-		<p>100 <sub>2</sub></p>
+     <strong>Texto importante o palabra clave</strong>
+     <br>
+     <b>Texto en sin importancia destacable</b>
+     <br>
+     <em>Texto en cursiva importante</em>
+     <br>
+     <i>Texto en cursivo</i>
+     <br>
+     <u>Texto surayado</u>
+     <br>
+     <s>Texto eliminado</s>
+     <br>
+     <mark>Texto resaltado</mark>
+     <br>
+     <span>Texto sin importancia</span>
+     <br>
+     <p>100 <sup>2</sup></p>
+     <br>
+     <p>100 <sub>2</sub></p>
      <br>
 
 
@@ -87,7 +92,7 @@
      </dl>
 
 
-      <!-- Tablas -->
+     <!-- Tablas -->
      <table border="1">
           <thead>
                <tr>
@@ -103,7 +108,7 @@
                     <td>Columna 2</td>
                     <td>Columna 3</td>
                </tr>
-     
+
                <tr>
                     <td>Columna 1</td>
                     <td>Columna 2</td>
@@ -124,4 +129,5 @@
 
 
 </body>
+
 </html>
